# anna-app-mini-notes

./: .gitignore  README.md  index.html  manifest.json  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
executas/notes-summarizer/: build_binary.ps1  build_binary.sh  executa.json  notes_summarizer.py  pyproject.toml
fixtures/: sampling-mock.jsonl
scripts/: test-rpc.ps1  test-rpc.sh
sdk/python/: pyproject.toml
src/: constants.js  main.js  notes.js  styles.css
