[project]
name = "executa-sdk"
version = "0.1.0"
description = "Anna Executa SDK Python helpers"
requires-python = ">=3.10"
authors = [{ name = "Anna Developers" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["executa_sdk"]
